# grpc_service

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose-dev.yml  pgadmin.yml
course_svc/: Dockerfile  entrypoint.sh  pyproject.toml  pytest.ini
course_svc/alembic/: env.py  script.py.mako
course_svc/alembic/versions/: 2023-01-28-19-05_1923daaf0702.py  2023-02-02-11-51_6809803e2d03.py  2023-02-02-12-07_99c910f38e9d.py  2023-02-02-18-25_9b709f641c4a.py  2023-02-03-12-06_b3dfd1a34309.py
course_svc/app/: server.py
course_svc/app/core/: config.py
course_svc/app/crud/: base_crud.py  course.py  course_topics.py  locales.py
course_svc/app/db/: session.py
course_svc/app/grpc_generated_files/: course_pb2.py  course_pb2_grpc.py  courses_pb2.py  courses_pb2_grpc.py  courses_types_pb2.py  locales_types_pb2.py
course_svc/app/helpers/: __init__.py  base_helper.py  course_helper.py  course_topic_helper.py  locales_helper.py
course_svc/app/models/: __init__.py  base_model.py  base_uuid_model.py  course_model.py  locale_model.py  media_model.py  user_model.py
course_svc/app/protos/: course.proto  courses.proto  courses_types.proto  locales_types.proto
course_svc/app/schemas/: course_topics.py
course_svc/app/tests/: conftest.py  test_course.py
course_svc/app/tests/factories/: __init__.py  base_factory.py  course_factory.py  locale_factory.py
course_svc/app/utils/: pagination.py
pgadmin/: servers.json
